--- a/KnowWE-Essentials/KnowWE-Resources/src/main/webapp/templates/KnowWE-haddock/skins/denkbares/skin.css
+++ b/KnowWE-Essentials/KnowWE-Resources/src/main/webapp/templates/KnowWE-haddock/skins/denkbares/skin.css
@@ -127,7 +127,6 @@ div.pagename a:hover {
 	margin: 1em 0 0.5em 0;
 	/*padding: 0.25em 0;*/
 	line-height: 1.2;
-	clear: left;
 }
 
 h2 {
